--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
     --cor-de-texto:#ffffff;
     
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body, html {
+    margin: 0;
+    padding: 0;
+}
 body{
     background-color: var(--cor-de-fundo);
     color: var(--cor-primaria);
@@ -14,7 +23,17 @@ body{
 header{
     background-color: var(--cor-secundaria);
     color: var(--cor-de-texto);
-
+    text-align: center;
+    padding: 1px;
+}
+h1{
+    font-size: 3rem;
+}
+nav{
+    text-align: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 2;
 }
 footer{
     background-color: var(--cor-secundaria);
