--- a/style.css
+++ b/style.css
@@ -50,9 +50,14 @@ transition: transform 0.1s;
 }
 footer{
     background-color: var(--cor-secundaria);
+    display: flex;
     color: var(--cor-de-texto);
     text-align: center;
+    align-items: center;
+    justify-content: center;
     font-size: 1rem;
     margin-top: 15px;
-
+    height: 3rem;
+    width: 100%;
 }
+
