--- a/style.css
+++ b/style.css
@@ -35,18 +35,31 @@ nav{
     text-align: center;
     justify-content: center;
     font-weight: 500;
-    font-size: 1;
-    margin-top: 10px;
+    font-size: 1.2rem;
+    margin-top: 15px;
+    display: flex;
 }
 nav a{
     text-decoration: none;
-    color: #0c145c;
     margin:0 2rem 1rem 0;
 }
 nav a:hover{
-text-decoration: underline;
-transform: scale(0.8);
-transition: transform 0.1s;
+    text-decoration: underline;
+    transform: scale(0.90);
+    transition: transform 0.1s;
+}
+.graficos-container{
+    margin: 5rem;
+}
+.graficos-container__texto{
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 2rem;
+    border: var(--cor-primaria) solid 2px;
+}
+span{
+    font-weight: bold;
+    color: var(--cor-secundaria)
 }
 footer{
     background-color: var(--cor-secundaria);
